# c-aris-pl

./: .gitignore  CMakeLists.txt  README.md  test.txt
include/: lexical_analyzer.h  parser.h  token.h  wff.h
src/: lexical_analyzer.c  main.c  parser.c  token.c  wff.c
test/: CMakeLists.txt  test.c
test/lexical_analyzer/: test_lexical_analizer.h  test_lexical_analyzer.c
test/parser/: test_parser.c  test_parser.h
